# zero-knowledge

./: Cargo.toml  README.MD
proto/: zkp_auth.proto
src/: client.rs  lib.rs  server.rs  zkp_auth.rs
